--- a/front/public/index.html
+++ b/front/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Réseau social d'entreprise, Groupomania">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,300&display=swap"
     rel="stylesheet">
-  <script src="https://kit.fontawesome.com/67b2fcf0e6.js" crossorigin="anonymous"></script>
+
+    <title> Groupomania</title>
 </head>
 
 <body>
